--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=3000
 DATABASE_URL="postgresql://ecomm_owner:npg_H9Kp3SidnIYL@ep-little-morning-a1lx6zv9-pooler.ap-southeast-1.aws.neon.tech/ecomm?sslmode=require"
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_secret
+JWT_SECRET=your_strong_jwt_secret
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
