--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-serve-static-core": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.10",
@@ -46,6 +47,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
