--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types","./src/types"],
+    "types": ["node","express"],
     "target": "ES6", 
     "module": "CommonJS",
     "rootDir": "src",
