--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/express-session": "^1.18.1",
     "@types/passport": "^1.0.17",
     "bcrypt": "^5.1.1",
+    "cookie": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
