--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ MONGODB_URI="mongodb://localhost:27017/ecomm"
 
 
 
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_secret
+GOOGLE_CLIENT_ID=405173851024-6jjojmdkpv7vuhlvq6mj81c0ja5vqupb.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 JWT_SECRET=your_strong_jwt_secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
