--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DATABASE_URL="postgresql://ecomm_owner:npg_H9Kp3SidnIYL@ep-little-morning-a1lx6z
 MONGODB_URI="mongodb://localhost:27017/ecomm"
 
 
-
+NODE_ENV=dev
 GOOGLE_CLIENT_ID=405173851024-6jjojmdkpv7vuhlvq6mj81c0ja5vqupb.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 JWT_SECRET=your_strong_jwt_secret
