Implemented payment initate checkout method and verifypayment , successfully integrating razorpay 🚀

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ GOOGLE_CLIENT_ID=405173851024-6jjojmdkpv7vuhlvq6mj81c0ja5vqupb.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 JWT_SECRET=your_strong_jwt_secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+
+
+RAZORPAY_KEY_ID=rzp_test_hUyODI62MmGvJb
+RAZORPAY_KEY_SECRET=ZBWIY2B75074IQqvFZcVFu1T
