--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "razorpay": "^2.9.6",
     "zod": "^3.24.3"
   }
 }
