--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@ PORT=3000
 
 
 
-# DATABASE_URL="postgresql://ecomm_owner:npg_H9Kp3SidnIYL@ep-little-morning-a1lx6zv9-pooler.ap-southeast-1.aws.neon.tech/ecomm?sslmode=require"
-# MONGODB_URI="mongodb://localhost:27017/ecomm"
+DATABASE_URL="postgresql://ecomm_owner:npg_H9Kp3SidnIYL@ep-little-morning-a1lx6zv9-pooler.ap-southeast-1.aws.neon.tech/ecomm?sslmode=require"
+MONGODB_URI="mongodb://localhost:27017/ecomm"
 
-DATABASE_URL=postgresql://user:password@postgres:5432/mydb
-MONGODB_URI="mongodb://mongodb:27017/ecomm"
-
+# DATABASE_URL=postgresql://user:password@postgres:5432/mydb
+# MONGODB_URI="mongodb://mongodb:27017/ecomm"
+FRONTEND_PUBLIC_PATH=/Users/ayushsingh/Desktop/relotdocker/relotfrontend/public
 
 
 NODE_ENV=dev
