Updated the vps folder to store the images

--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ MONGODB_URI="mongodb://localhost:27017/ecomm"
 
 # DATABASE_URL=postgresql://user:password@postgres:5432/mydb
 # MONGODB_URI="mongodb://mongodb:27017/ecomm"
-FRONTEND_PUBLIC_PATH=/Users/ayushsingh/Desktop/relotdocker/relotfrontend/public
+#FRONTEND_PUBLIC_PATH=/Users/ayushsingh/Desktop/relotdocker/relotfrontend/public
 
-
+FRONTEND_PUBLIC_PATH=/root/frontend/public
 NODE_ENV=dev
 GOOGLE_CLIENT_ID=405173851024-6jjojmdkpv7vuhlvq6mj81c0ja5vqupb.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
