added mongo file generator inside container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,25 @@ services:
     networks:
       - app-network
 
+  mongo-keyfile-generator:
+    image: alpine/openssl # Image with openssl, chmod, chown
+    command: >
+      sh -c "
+        if [ ! -f /keyfiles/mongo-keyfile ]; then
+          echo 'Generating MongoDB keyfile...';
+          openssl rand -base64 756 > /keyfiles/mongo-keyfile;
+          chmod 400 /keyfiles/mongo-keyfile;
+          chown 999:999 /keyfiles/mongo-keyfile; # UID:GID for mongodb user in official mongo image
+          echo 'MongoDB keyfile generated, permissions and ownership set.';
+        else
+          echo 'MongoDB keyfile already exists. Ensuring permissions and ownership.';
+          chmod 400 /keyfiles/mongo-keyfile;
+          chown 999:999 /keyfiles/mongo-keyfile;
+        fi
+      "
+    volumes:
+      - mongo_keyfile_volume:/keyfiles
+
   mongo:
     image: mongo:6
     container_name: mongo
@@ -55,23 +74,29 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-    command: --replSet rs0 --bind_ip_all
+    command: mongod --replSet rs0 --bind_ip_all --keyFile /etc/mongo-keyfile
     volumes:
       - mongo_data:/data/db
+      - mongo_keyfile_volume:/etc/mongo-keyfile:ro # Mount the keyfile read-only
     networks:
       - app-network
     healthcheck:
-      test: ["CMD-SHELL", "mongosh --quiet -u $MONGO_INITDB_ROOT_USERNAME -p $MONGO_INITDB_ROOT_PASSWORD --eval 'db.runCommand(\"ping\").ok'"]
+      test: ["CMD-SHELL", "mongosh --quiet -u $$MONGO_INITDB_ROOT_USERNAME -p $$MONGO_INITDB_ROOT_PASSWORD --eval 'db.runCommand(\"ping\").ok'"]
       interval: 10s
       timeout: 20s
       retries: 15
       start_period: 60s
+    depends_on:
+      mongo-keyfile-generator:
+        condition: service_completed_successfully # Ensures keyfile is ready
 
   mongo-init:
     image: mongo:6
     depends_on:
       mongo:
         condition: service_healthy
+      # mongo-keyfile-generator: # Implicitly handled as 'mongo' depends on it
+      #   condition: service_completed_successfully
     entrypoint: >
       bash -c "
         echo 'Initiating single-node replica set...';
@@ -90,6 +115,7 @@ services:
 volumes:
   pg_data:
   mongo_data:
+  mongo_keyfile_volume: {} # Define the shared volume for the keyfile
 
 networks:
   app-network:
