--- a/.github/workflows/vpsDeploy.yml
+++ b/.github/workflows/vpsDeploy.yml
@@ -1,11 +1,9 @@
-
 name: VPS Deploy Workflow
 
 on:
   push:
     branches: [prod]
   workflow_dispatch:
-      
 
 jobs:
   deploytovps:
@@ -18,13 +16,18 @@ jobs:
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
-      
+
+      - name: Generate MongoDB keyfile
+        run: |
+          openssl rand -base64 756 > mongo-keyfile
+          chmod 400 mongo-keyfile
+
       - name: Add VPS to known_hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
-      - name: Copy code to VPS
+      - name: Copy project and keyfile to VPS
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.SERVER_IP }}
@@ -32,6 +35,17 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           source: "."
           target: "/root/app"
+
+      - name: Move mongo-keyfile into subfolder on VPS
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: root
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            mkdir -p /root/app/mongo-keyfile
+            mv /root/app/mongo-keyfile /root/app/mongo-keyfile/mongo-keyfile
+            chmod 400 /root/app/mongo-keyfile/mongo-keyfile
 
       - name: Create .env file on VPS
         uses: appleboy/ssh-action@v1.0.0
@@ -41,6 +55,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             echo "${{ secrets.ENV_FILE }}" > /root/app/.env
+
       - name: Rebuild and start containers on VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
