--- a/.github/workflows/vpsDeploy.yml
+++ b/.github/workflows/vpsDeploy.yml
@@ -1,3 +1,4 @@
+
 name: VPS Deploy Workflow
 
 on:
@@ -47,14 +48,16 @@ jobs:
           script: |
             echo "${{ secrets.ENV_FILE }}" > /root/app/.env
 
-      - name: Set permissions on keyfile on VPS
+      - name: Set ownership and permissions on keyfile on VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_IP }}
           username: root
           key: ${{ secrets.SSH_KEY }}
           script: |
-            chmod 400 /root/app/mongo-keyfile/mongo-key
+            # Ensure the file is owned by UID 999 (mongodb) and readable only by owner
+            chown 999:999 /root/app/mongo-keyfile/mongo-keyfile
+            chmod 400 /root/app/mongo-keyfile/mongo-keyfile
 
       - name: Rebuild and start containers on VPS
         uses: appleboy/ssh-action@v1.0.0
@@ -66,3 +69,4 @@ jobs:
             cd /root/app
             docker compose down || true
             docker compose up --build -d
+
