--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,16 +53,23 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     command: >
-      mongod --replSet rs0 \
-             --bind_ip_all \
-             --keyFile /etc/mongo-keyfile/mongo-keyfile
+      mongod \
+        --replSet rs0 \
+        --bind_ip_all \
+        --keyFile /etc/mongo-keyfile/mongo-keyfile \
+        --logpath /dev/stdout \
+        --logappend
     volumes:
       - mongo_data:/data/db
       - ./mongo-keyfile:/etc/mongo-keyfile:ro
     networks:
       - app-network
     healthcheck:
-      test: ["CMD-SHELL", "mongosh --quiet -u $$MONGO_INITDB_ROOT_USERNAME -p $$MONGO_INITDB_ROOT_PASSWORD --authenticationDatabase admin --eval 'db.runCommand(\"ping\").ok'"]
+      test:
+        [
+          "CMD-SHELL",
+          "mongosh \"mongodb://$${MONGO_INITDB_ROOT_USERNAME}:$${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/admin\" --eval 'db.runCommand({ ping: 1 })' &> /dev/null"
+        ]
       interval: 10s
       timeout: 20s
       retries: 15
@@ -76,34 +83,32 @@ services:
     entrypoint: >
       bash -c "
         echo '🛠 Initiating MongoDB replica set…';
-        mongosh --host mongo \
-          -u \"${MONGO_INITDB_ROOT_USERNAME}\" \
-          -p \"${MONGO_INITDB_ROOT_PASSWORD}\" \
-          --authenticationDatabase admin \
-          --eval '
-            cfg = {
-              _id: \"rs0\",
-              members: [{ _id: 0, host: \"mongo:27017\" }]
-            };
-            printjson(cfg);
-            rs.initiate(cfg);
-          ';
+
+        # Use a single mongosh connection string so bash does NOT split flags:
+        mongosh \"mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/admin\" --eval '
+          cfg = {
+            _id: \"rs0\",
+            members: [{ _id: 0, host: \"mongo:27017\" }]
+          };
+          printjson(cfg);
+          rs.initiate(cfg);
+        ';
+
         echo '⏳ Waiting for PRIMARY…';
         while true; do
-          STATE=$(mongosh --quiet \
-            --host mongo \
-            -u \"${MONGO_INITDB_ROOT_USERNAME}\" \
-            -p \"${MONGO_INITDB_ROOT_PASSWORD}\" \
-            --authenticationDatabase admin \
-            --eval 'print(rs.status().myState)' || echo "NR")
+          STATE=$(mongosh \
+            \"mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/admin\" \
+            --quiet --eval 'print(rs.status().myState)' || echo \"NR\")
+
           if [ \"${STATE}\" = \"1\" ]; then
-            echo \"✅ PRIMARY elected (\${STATE}).\";
+            echo \"✅ PRIMARY elected (${STATE}).\";
             break;
           else
-            echo \"… still in state \${STATE}, retrying in 2s…\";
+            echo \"… still in state ${STATE}, retrying in 2s…\";
             sleep 2;
           fi
         done
+
         echo '🛠 Replica set is now PRIMARY. Initialization done.';
       "
     env_file:
